tests/baselines/reference/augmentedTypesModules3.errors.txt
augmentedTypesModules3.ts(5,8): error TS2434: A namespace declaration cannot be located prior to a class or function with which it is merged.


==== augmentedTypesModules3.ts (1 errors) ====
    //// module then class
    module m3 { }
    class m3 { } // ok since the module is not instantiated
    
    module m3a { var y = 2; }
           ~~~
!!! error TS2434: A namespace declaration cannot be located prior to a class or function with which it is merged.
    class m3a { foo() { } } // error, class isn't ambient or declared before the module